fix spacing for contact method

--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -108,6 +108,10 @@ input, #message {
     height: 400px;
 }
 
+.contact-method p {
+    display: inline;
+}
+
 .radio {
     margin-left: 10px;
 }
